--- a/writing/david-bowies-ode-to-sci-fi-and-space-science/index.html
+++ b/writing/david-bowies-ode-to-sci-fi-and-space-science/index.html
@@ -112,7 +112,7 @@
                 <div class="container article-title mb-4" data-aos="fade-up">
                     <h1>David Bowie's Ode to Sci-Fi and Space Science</h1>
                     <p class="text-muted mb-1">by Sasha Cheek</p>
-                    <p class="text-muted mb-1">Nov 2, 2025</p>
+                    <p class="text-muted mb-1">Apr 11, 2024</p><!--Updated-->
                 </div>
 
                 <!-- Feature Image -->
