--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
           style="--title-img:url('/assets/img/headers/desk-with-computer-it-placed-front-window.webp');">
           <!-- Section Title -->
           <div class="container section-title" data-aos="fade-up">
-            <h1>NOTES FROM THE SANDBOX:<br><i>A Writer-Engineer's Log</i></h1>
+            <h1>NOTES FROM THE SANDBOX</h1>
             <h2 class="framed-subtitle">Tracing my beginnings as a writer-engineer—learning out loud, one build and
               paragraph at
               a time.</h2>
