--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=yes">
   <!-- ======== SEO + SOCIAL META TAGS ======== -->
 
-  <title>SASHA CHEEK | TECH PROGRAM MANAGER & SCIENCE WRITER</title>
+  <title>Sasha Cheek | Systems, Stories, and Science</title>
   <meta name="description"
-    content="Sasha Cheek — Technical Program Manager, API integration specialist, and science writer. Explore my portfolio of technical projects, data visualizations, and published writing.">
+    content="Sasha Cheek — Systems Engineer, API integration specialist, and science writer. Explore my portfolio of technical projects, data visualizations, and published writing.">
   <meta name="keywords"
-    content="Sasha Cheek, API Integration, Technical Program Manager, Science Writer, Data Visualization, Tech Portfolio, Systems Integration, Technical Consulting, Science Communication, Cyberpunk Portfolio">
+    content="Sasha Cheek, API Integration, Systems Engineer, Science Writer, Data Visualization, Tech Portfolio, Systems Integration, Technical Consulting, Science Communication, Cyberpunk Portfolio">
   <meta name="author" content="Sasha Cheek">
 
   <!-- Open Graph (Facebook, LinkedIn, etc.) -->
-  <meta property="og:title" content="SASHA CHEEK | TECH PROGRAM MANAGER & SCIENCE WRITER">
+  <meta property="og:title" content="Sasha Cheek | Systems, Stories, and Science">
   <meta property="og:description"
     content="Explore my work in API integration, tech consulting, and science communication.">
   <meta property="og:image" content="https://sashacheek.com/assets/img/preview-card.png">
@@ -26,7 +26,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="SASHA CHEEK | TECH PROGRAM MANAGER & SCIENCE WRITER">
+  <meta name="twitter:title" content="Sasha Cheek | Systems, Stories, and Science">
   <meta name="twitter:description" content="Explore my portfolio in technical systems and science writing.">
   <meta name="twitter:image" content="https://sashacheek.com/assets/img/preview-card.png">
 
@@ -147,14 +147,8 @@
         </h3>
         <p class="tagline">Bridging the gap between systems and narrative.</p>
 
-        <!-- Substack CTA/Subscribe Button -->
-        <a class="btn btn-neon"
-          href="https://sashacheek.substack.com/subscribe?utm_source=site&utm_medium=footer&utm_campaign=subscribe_cta"
-          target="_blank" rel="noopener">Subscribe on Substack</a>
-
         <!-- Social Media Links -->
         <div class="social-links">
-          <a href="https://substack.com/@sashacheek"><i class="bi bi-substack"></i></a>
           <a href="https://github.com/scheek-100"><i class="bi bi-github"></i></a>
           <a href="https://medium.com/@sashacheek100"><i class="bi bi-medium"></i></a>
           <a href="https://www.linkedin.com/in/sasha-cheek/"><i class="bi bi-linkedin"></i></a>
@@ -836,18 +830,17 @@
   <footer id="footer" class="footer" data-aos="fade-up" data-aos-delay="100" style="background:url('assets/img/cyberpunk-footer.webp') no-repeat center center / cover !important;
                background-size:cover;">
     <div class="container" data-aos="fade-up" data-aos-delay="100">
-      <h3 class="sitename">SASHA CHEEK | TECH PROGRAM MANAGER & SCIENCE WRITER</h3>
+      <h3 class="sitename">Sasha Cheek | Systems, Stories, and Science</h3>
       <p>Bridging the gap between systems and narrative.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://substack.com/@sashacheek"><i class="bi bi-substack"></i></a>
         <a href="https://github.com/scheek-100"><i class="bi bi-github"></i></a>
         <a href="https://medium.com/@sashacheek100"><i class="bi bi-medium"></i></a>
         <a href="https://www.linkedin.com/in/sasha-cheek/"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
-          <span>Copyright</span> <strong class="px-1 sitename">SASHA CHEEK | TECH PROGRAM MANAGER & SCIENCE
-            WRITER</strong> <span>All Rights
+          <span>Copyright</span> <strong class="px-1 sitename">Sasha Cheek | Systems, Stories, and Science</strong>
+          <span>All Rights
             Reserved</span>
         </div>
         <!-- Bootstrap Framework/Template Credits -->
