--- a/writing/david-bowies-ode-to-sci-fi-and-space-science/index.html
+++ b/writing/david-bowies-ode-to-sci-fi-and-space-science/index.html
@@ -289,19 +289,16 @@
     <footer id="footer" class="footer" data-aos="fade-up" data-aos-delay="100"
         style="background:url('/assets/img/cyberpunk-footer.webp') no-repeat center center / cover !important;">
         <div class="container">
-            <h3 class="sitename" data-aos="fade-up" data-aos-delay="100">SASHA CHEEK | TECH PROGRAM MANAGER & SCIENCE
-                WRITER</h3>
+            <h3 class="sitename" data-aos="fade-up" data-aos-delay="100">Sasha Cheek | Systems, Stories, and Science</h3>
             <p>Bridging the gap between systems and narrative.</p>
             <div class="social-links d-flex justify-content-center">
-                <a href="https://substack.com/@sashacheek"><i class="bi bi-substack"></i></a>
                 <a href="https://github.com/scheek-100"><i class="bi bi-github"></i></a>
                 <a href="https://medium.com/@sashacheek100"><i class="bi bi-medium"></i></a>
                 <a href="https://www.linkedin.com/in/sasha-cheek/"><i class="bi bi-linkedin"></i></a>
             </div>
             <div class="container">
                 <div class="copyright">
-                    <span>Copyright</span> <strong class="px-1 sitename">SASHA CHEEK | TECH PROGRAM MANAGER & SCIENCE
-                        WRITER</strong> <span>All Rights Reserved</span>
+                    <span>Copyright</span> <strong class="px-1 sitename">Sasha Cheek | Systems, Stories, and Science</strong> <span>All Rights Reserved</span>
                 </div>
 
                 <!-- Bootstrap Framework/Template Credits -->
