--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">SASHA CHEEK |<br>TECH PM &<br>SCIENCE<br>WRITER</h1>
+        <h1 class="sitename">Sasha Cheek | <br>Systems, <br>Stories, and <br>Science</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -137,8 +137,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h1>Sasha Cheek<br></h1>
-        <h2>I am <span class="typed" data-typed-items="a Tech Program Manager, a Science Writer, an Engineer">Systems &
-            Integrations</span></h2>
+        <h2>I am <span class="typed" data-typed-items="a Systems Engineer, a Science Writer"></span></h2>
         <!-- Divider -->
         <div class="t-divider t-node" aria-hidden="true"></div>
 
