--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
         <div class="t-divider t-node" aria-hidden="true"></div>
 
         <!--Wriiting Subjects & Tagline -->
-        <h3 class="small mt-2" style="opacity: 0.8;">AI * APIs * Systems Engineering * Data * Physics * Space Science
+        <h3 class="small mt-2" style="opacity: 0.8;">Technology · Data · Human Systems · Science Communication · Design Thinking
         </h3>
-        <p class="tagline">Bridging the gap between systems and narrative.</p>
+        <p class="tagline">Exploring how engineered systems shape the people and processes behind science and technology.</p>
 
         <!-- Social Media Links -->
         <div class="social-links">
@@ -176,17 +176,19 @@
 
             <!-- Content and Subtitle-->
             <div class="col-lg-7 content" data-aos="fade-up">
-              <h2>Sasha Cheek is a tech program manager and freelance science writer with a hunger for demystifying
-                engineering and science through storytelling.</h2>
+              <h2>Sasha Cheek is a systems engineer and science writer who explores how technology, data, and human systems
+                intersect.</h2>
               <div class="container" data-aos="fade-up" data-aos-delay="100">
-                <p>Her career began with a systems engineering NASA internship, followed by recent technical liaison and
-                  program management roles at Microsoft and Indeed. In addition to working full-time in technology,
-                  Sasha is an M.A. candidate in Science Writing at Johns Hopkins University.</p>
-                <p>When Sasha is not debugging code and creating articles, she's dissecting the science behind her
-                  favorite films and TV shows.</p>
+                <p>Her work focuses on translating complex engineering and organizational processes into clear, data-driven
+                stories that reveal their real-world impact.</p>
+                <p>With experience managing large-scale API and data integrations for global platforms, she brings a rare technical
+                  fluency to her writing. Sasha is currently an M.A. candidate in Science Writing at Johns Hopkins University, where
+                  she studies how to connect rigorous analysis with accessible communication.</p>
+                <p>When not building or debugging systems, she writes about the people, structures, and ideas shaping the future of
+                  science and technology.</p>
               </div>
             </div>
-    </section><!-- /About Section -->
+            </section><!-- /About Section -->
 
     <!-- Featured Writing Section -->
     <section id="published-work" class="published-work section-black py-5">
@@ -830,7 +832,7 @@
                background-size:cover;">
     <div class="container" data-aos="fade-up" data-aos-delay="100">
       <h3 class="sitename">Sasha Cheek | Systems, Stories, and Science</h3>
-      <p>Bridging the gap between systems and narrative.</p>
+      <p>Exploring how engineered systems shape the people and processes behind science and technology.</p>
       <div class="social-links d-flex justify-content-center">
         <a href="https://github.com/scheek-100"><i class="bi bi-github"></i></a>
         <a href="https://medium.com/@sashacheek100"><i class="bi bi-medium"></i></a>
