--- a/index.html
+++ b/index.html
@@ -438,11 +438,10 @@
           }
 
           .blog-content h3 {
-            font-size: 1.1rem;
-            color: #00ffff;
-            text-shadow: 0 0 10px #00ffff, 0 0 20px rgba(0, 255, 255, 0.6);
-            margin-bottom: 8px;
-            transition: color 0.3s ease, text-shadow 0.3s ease;
+          font-family: 'VT323', monospace !important;
+          font-size: 1.3rem;
+          color: #00f7ff;
+          text-shadow: 0 0 10px #00f7ff, 0 0 20px rgba(0, 255, 255, 0.6);
           }
 
           .blog-content p {
@@ -461,13 +460,6 @@
             color: #00ffff;
             font-weight: 600;
             transition: color 0.3s ease, text-shadow 0.3s ease;
-          }
-
-          .blog-content h3 .blog-link {
-            font-family: 'VT323', monospace;
-            font-size: 1.4rem;
-            color: #00f7ff;
-            margin-bottom: 0.5rem;
           }
 
           .carousel-btn {
