--- a/index.html
+++ b/index.html
@@ -222,11 +222,11 @@
           <div class="featured-content">
             <h3>How Telepathic Music Inspires Disabled Creatives</h3>
             <p class="featured-meta">Published on Hackernoon — Featured Story · Nov 3, 2025</p>
-            <p>Exploring the world of brain-computer interface (BCI) technology for disabled creatives and
-              the battle against neurodegenerative disorders.
+            <p><i>Exploring the world of brain-computer interface (BCI) technology for disabled creatives and
+                the battle against neurodegenerative disorders.</i>
             </p>
-            <a href="https://hackernoon.com/how-telepathic-music-inspires-disabled-creatives" class="featured-link">Read
-              Article →</a>
+            <a href="https://hackernoon.com/how-telepathic-music-inspires-disabled-creatives" class="featured-link">View
+              on Hackernoon →</a>
           </div>
         </article>
       </section><!-- End of Featured Articles Section -->
@@ -246,7 +246,6 @@
       </section><!-- End of Self-Published Articles Section -->
 
       <!--Carousel JS Script - Self-Published Articles -->
-      <!-- Carousel JS Script - Published Work -->
       <script>
         const publishedPosts = [
           {
