--- a/index.html
+++ b/index.html
@@ -375,15 +375,32 @@
 
         <!-- Project 2 Row 2 -->
         <div class="portfolio-item" data-aos="fade-up" data-aos-delay="100">
-          <img src="assets/img/portfolio/tron-coming-soon-placeholder.png" alt="API Monitoring Data Pipeline">
+          <img src="assets/img/portfolio/project-2-main/sasha-cheek-project-2-featured-image-v02.webp"
+            alt="Sasha Cheek Bootstrap Portfolio">
           <div class="portfolio-content">
-            <h3>API Monitoring Data Pipeline</h3>
-            <p>Real-time feed tracking and data QA pipeline for partner integrations.</p>
+            <h3>Cyberfolio: A Systems-Engineered Personal Platform</h3>
+            <p>E2E (End-to-end) migration and rebuild of a static platform into a modular Bootstrap site integrating
+              AOS, Swiper.js, custom JS, and multiple integrations.</p>
           </div>
           <div class="tags">
-            <span>Python</span><span>API</span><span>Automation</span>
+            <span>GitHub
+              Pages</span><span>HTML</span><span>JavaScript</span><span>Bootstrap</span><span>Cloudflare</span><span>Hosting</span>
           </div>
         </div>
+
+        <!-- Project 3 Row 3 -->
+        <!--<div class="portfolio-item" data-aos="fade-up" data-aos-delay="100">
+          <img src="assets/img/portfolio/tron-coming-soon-placeholder.png" alt="API Monitoring Data Pipeline">
+          <div class="portfolio-content">
+            <h3>Cyberfolio: A Systems-Engineered Personal Platform</h3>
+            <p>E2E (End-to-end) migration and rebuild of a static platform into a modular Bootstrap site integrating AOS, Swiper.js,
+              custom JS, and multiple integrations.</p>
+          </div>
+          <div class="tags">
+            <span>GitHub
+              Pages</span><span>HTML</span><span>JavaScript</span><span>Bootstrap</span><span>Cloudflare</span><span>Hosting</span>
+          </div>
+        </div>-->
 
       </section><!--END OF TECH PORTFOLIO SECTION -->
 
