--- a/index.html
+++ b/index.html
@@ -365,8 +365,8 @@
 
           <div class="portfolio-content">
             <h3>Healthcare Data Breach Map</h3>
-            <p>U.S. states choropleth map showing healthcare data breaches (Oct 2024–2025), built using Datawrapper and
-              Google Sheets.</p>
+            <p><i>U.S. states choropleth map showing healthcare data breaches (Oct 2024–2025), built using Datawrapper and
+              Google Sheets.</i></p>
           </div>
           <div class="tags">
             <span>Datawrapper</span><span>Google Sheets</span>
@@ -379,28 +379,15 @@
             alt="Sasha Cheek Bootstrap Portfolio">
           <div class="portfolio-content">
             <h3>Cyberfolio: A Systems-Engineered Personal Platform</h3>
-            <p>E2E (End-to-end) migration and rebuild of a static platform into a modular Bootstrap site integrating
-              AOS, Swiper.js, custom JS, and multiple integrations.</p>
+            <p><i>E2E (End-to-end) migration and rebuild of a static platform into a modular Bootstrap site integrating
+              AOS, Swiper.js, custom JS, and multiple integrations.</i></p>
+              <a href="/tech-portfolio/web-dev-case-study-portfolio-details/" class="portfolio-details-link">Read More →</a>
           </div>
           <div class="tags">
             <span>GitHub
               Pages</span><span>HTML</span><span>JavaScript</span><span>Bootstrap</span><span>Cloudflare</span><span>Hosting</span>
           </div>
         </div>
-
-        <!-- Project 3 Row 3 -->
-        <!--<div class="portfolio-item" data-aos="fade-up" data-aos-delay="100">
-          <img src="assets/img/portfolio/tron-coming-soon-placeholder.png" alt="API Monitoring Data Pipeline">
-          <div class="portfolio-content">
-            <h3>Cyberfolio: A Systems-Engineered Personal Platform</h3>
-            <p>E2E (End-to-end) migration and rebuild of a static platform into a modular Bootstrap site integrating AOS, Swiper.js,
-              custom JS, and multiple integrations.</p>
-          </div>
-          <div class="tags">
-            <span>GitHub
-              Pages</span><span>HTML</span><span>JavaScript</span><span>Bootstrap</span><span>Cloudflare</span><span>Hosting</span>
-          </div>
-        </div>-->
 
       </section><!--END OF TECH PORTFOLIO SECTION -->
 
