scheek-FormSpreeEndpointEdit-CodeSnippet-v02-11.13.2025

--- a/tech-portfolio/web-dev-case-study-portfolio-details/index.html
+++ b/tech-portfolio/web-dev-case-study-portfolio-details/index.html
@@ -283,7 +283,7 @@ document.addEventListener('DOMContentLoaded', function () {
                 <!-- Code Snippet Block -->
                 <pre><code class="language-html">
   &lt;!-- Contact Form --&gt;
-  &lt;form id="contact-form" action="https://formspree.io/f/mldpgwjj" method="POST" class="contact-form" novalidate&gt;
+  &lt;form id="contact-form" action="https://formspree.io/f/[ENDPOINT URL]" method="POST" class="contact-form" novalidate&gt;
     &lt;div class="row gy-4"&gt;
 
       &lt;!-- Name --&gt;
